# libimgmap

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: ImgMapConfig.cmake  c.cmake
include/: imgmap.h
src/: CMakeLists.txt  data_conv.c  data_conv.h  file_detect.c  file_map.c  file_map.h  file_parse.c  file_parse.h  file_types.h  imgmap.c  pbm_file.c
tests/: CMakeLists.txt  test_create.c  test_open.c
